BKDK-286 Date display format

--- a/config/install/core.entity_view_display.node.os2web_news.default.yml
+++ b/config/install/core.entity_view_display.node.os2web_news.default.yml
@@ -62,7 +62,7 @@ content:
     weight: 104
     label: above
     settings:
-      date_format: medium
+      date_format: os2core_date_medium
       custom_date_format: ''
       timezone: ''
     third_party_settings: {  }
