--- a/config/optional/field.field.node.os2web_news.field_os2web_news_intro.yml
+++ b/config/optional/field.field.node.os2web_news.field_os2web_news_intro.yml
@@ -1,17 +1,18 @@
+uuid: 13019c0f-1baa-4f39-9abc-8f6749d47203
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.node.field_os2web_page_heading
+    - field.storage.node.field_os2web_news_intro
     - node.type.os2web_news
-id: node.os2web_news.field_os2web_page_heading
-field_name: field_os2web_page_heading
+id: node.os2web_news.field_os2web_news_intro
+field_name: field_os2web_news_intro
 entity_type: node
 bundle: os2web_news
-label: Overskrift
+label: Intro
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
