--- a/config/optional/field.field.node.os2web_news.field_os2web_news_paragraph_righ.yml
+++ b/config/optional/field.field.node.os2web_news.field_os2web_news_paragraph_righ.yml
@@ -1,17 +1,19 @@
+uuid: f1a9954b-db32-4112-be98-7b1c29a76b3e
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.node.field_os2web_news_accordion
+    - field.storage.node.field_os2web_news_paragraph_righ
     - node.type.os2web_news
-    - paragraphs.paragraphs_type.os2web_accordion_item
+    - paragraphs.paragraphs_type.os2web_box_paragraph
+    - paragraphs.paragraphs_type.os2web_simple_text_paragraph
   module:
     - entity_reference_revisions
-id: node.os2web_news.field_os2web_news_accordion
-field_name: field_os2web_news_accordion
+id: node.os2web_news.field_os2web_news_paragraph_righ
+field_name: field_os2web_news_paragraph_righ
 entity_type: node
 bundle: os2web_news
-label: Harmonika
+label: 'Afsnit (højre sidebar)'
 description: ''
 required: false
 translatable: false
@@ -22,51 +24,64 @@ settings:
   handler_settings:
     negate: 0
     target_bundles:
-      os2web_accordion_item: os2web_accordion_item
+      os2web_box_paragraph: os2web_box_paragraph
+      os2web_simple_text_paragraph: os2web_simple_text_paragraph
     target_bundles_drag_drop:
       os2web_2_columns:
-        weight: 16
-        enabled: false
-      os2web_3_columns:
-        weight: 17
-        enabled: false
-      os2web_accordion:
-        weight: 18
-        enabled: false
-      os2web_accordion_item:
-        enabled: true
-        weight: 19
-      os2web_banner_paragraph:
         weight: 20
         enabled: false
-      os2web_borgerdk_article:
+      os2web_3_columns:
         weight: 21
         enabled: false
-      os2web_borgerdk_selfser_ref:
+      os2web_accordion:
         weight: 22
         enabled: false
-      os2web_borgerdk_selfservice_cats:
+      os2web_accordion_item:
         weight: 23
         enabled: false
-      os2web_box_paragraph:
+      os2web_banner_paragraph:
         weight: 24
         enabled: false
-      os2web_events_search:
+      os2web_borgerdk_article:
         weight: 25
         enabled: false
-      os2web_files_paragraph:
+      os2web_borgerdk_selfser_ref:
         weight: 26
         enabled: false
-      os2web_gis_map:
+      os2web_borgerdk_selfservice_cats:
         weight: 27
         enabled: false
-      os2web_meetings_search:
+      os2web_box_paragraph:
+        enabled: true
         weight: 28
-        enabled: false
-      os2web_simple_text_paragraph:
+      os2web_content_reference:
         weight: 29
         enabled: false
-      os2web_wrapper:
+      os2web_events_search:
         weight: 30
+        enabled: false
+      os2web_files_paragraph:
+        weight: 31
+        enabled: false
+      os2web_gis_map:
+        weight: 32
+        enabled: false
+      os2web_meetings_search:
+        weight: 33
+        enabled: false
+      os2web_menu_links_paragraph:
+        weight: 34
+        enabled: false
+      os2web_section_paragraph:
+        weight: 35
+        enabled: false
+      os2web_section_promoted_pages:
+        weight: 36
+        enabled: false
+      os2web_simple_text_paragraph:
+        enabled: true
+        weight: 37
+      os2web_wrapper:
+        weight: 38
         enabled: false
 field_type: entity_reference_revisions
