--- a/config/optional/field.storage.node.field_os2web_news_heading.yml
+++ b/config/optional/field.storage.node.field_os2web_news_heading.yml
@@ -1,10 +1,11 @@
+uuid: 84f6710f-c882-4bf5-b6dc-83a486c27b5d
 langcode: da
 status: true
 dependencies:
   module:
     - node
-id: node.field_os2web_news_deck
-field_name: field_os2web_news_deck
+id: node.field_os2web_news_heading
+field_name: field_os2web_news_heading
 entity_type: node
 type: string_long
 settings:
