--- a/config/optional/core.entity_view_display.node.os2web_news.list.yml
+++ b/config/optional/core.entity_view_display.node.os2web_news.list.yml
@@ -2,6 +2,7 @@ langcode: da
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.list
     - field.field.node.os2web_news.field_os2web_news_article_author
     - field.field.node.os2web_news.field_os2web_news_article_date
     - field.field.node.os2web_news.field_os2web_news_description
@@ -14,17 +15,16 @@ dependencies:
     - field.field.node.os2web_news.field_os2web_news_paragraph_wid
     - field.field.node.os2web_news.field_os2web_news_primaryimage
     - field.field.node.os2web_news.field_os2web_news_section
-    - image.style.os2web_normal
+    - image.style.os2web_medium
     - node.type.os2web_news
   module:
-    - entity_reference_revisions
     - svg_image
     - text
     - user
-id: node.os2web_news.default
+id: node.os2web_news.list
 targetEntityType: node
 bundle: os2web_news
-mode: default
+mode: list
 content:
   body:
     label: hidden
@@ -73,14 +73,15 @@ content:
     type: basic_string
     region: content
   field_os2web_news_description:
-    weight: 5
+    weight: 4
     label: hidden
-    settings: {  }
+    settings:
+      trim_length: 200
     third_party_settings: {  }
-    type: text_default
+    type: text_trimmed
     region: content
   field_os2web_news_heading:
-    weight: 3
+    weight: 0
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -100,7 +101,7 @@ content:
     type: image
     region: content
   field_os2web_news_intro:
-    weight: 4
+    weight: 3
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -115,20 +116,11 @@ content:
       link: ''
     third_party_settings: {  }
     region: content
-  field_os2web_news_paragraph_narr:
-    type: entity_reference_revisions_entity_view
-    weight: 6
-    region: content
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
   field_os2web_news_primaryimage:
     weight: 1
     label: hidden
     settings:
-      image_style: os2web_normal
+      image_style: os2web_medium
       image_link: ''
       svg_render_as_image: true
       svg_attributes:
@@ -137,6 +129,14 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_os2web_news_section:
+    type: entity_reference_label
+    weight: 5
+    region: content
+    label: hidden
+    settings:
+      link: false
+    third_party_settings: {  }
   field_os2web_news_video:
     weight: 3
     label: hidden
@@ -155,19 +155,15 @@ content:
     third_party_settings: {  }
     type: basic_string
     region: content
-  links:
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   field_os2web_news_accord_title: true
   field_os2web_news_article_author: true
   field_os2web_news_image_video: true
   field_os2web_news_paragraph_bann: true
   field_os2web_news_paragraph_left: true
+  field_os2web_news_paragraph_narr: true
   field_os2web_news_paragraph_righ: true
   field_os2web_news_paragraph_wid: true
-  field_os2web_news_section: true
   langcode: true
+  links: true
   search_api_excerpt: true
