--- a/config/optional/core.entity_view_display.node.os2web_news.teaser.yml
+++ b/config/optional/core.entity_view_display.node.os2web_news.teaser.yml
@@ -1,10 +1,8 @@
-uuid: e304d67a-a81d-41c0-a655-1ccbf768a666
 langcode: da
 status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.os2web_news.field_migration_old_url
     - field.field.node.os2web_news.field_os2web_news_article_author
     - field.field.node.os2web_news.field_os2web_news_article_date
     - field.field.node.os2web_news.field_os2web_news_description
@@ -17,34 +15,55 @@ dependencies:
     - field.field.node.os2web_news.field_os2web_news_paragraph_wid
     - field.field.node.os2web_news.field_os2web_news_primaryimage
     - field.field.node.os2web_news.field_os2web_news_section
+    - image.style.os2web_medium
     - node.type.os2web_news
   module:
+    - svg_image
+    - text
     - user
-_core:
-  default_config_hash: gTmBfxJEAJ12bLWQZAdvTBl24IDjZBYdLql4fdXPrRs
 id: node.os2web_news.teaser
 targetEntityType: node
 bundle: os2web_news
 mode: teaser
 content:
-  links:
-    weight: 100
+  field_os2web_news_description:
+    type: text_trimmed
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      trim_length: 150
+    third_party_settings: {  }
+  field_os2web_news_heading:
+    type: basic_string
+    weight: 0
+    region: content
+    label: hidden
     settings: {  }
     third_party_settings: {  }
+  field_os2web_news_primaryimage:
+    type: image
+    weight: 1
     region: content
+    label: hidden
+    settings:
+      image_style: os2web_medium
+      image_link: ''
+      svg_render_as_image: true
+      svg_attributes:
+        width: null
+        height: null
+    third_party_settings: {  }
 hidden:
-  field_migration_old_url: true
   field_os2web_news_article_author: true
   field_os2web_news_article_date: true
-  field_os2web_news_description: true
-  field_os2web_news_heading: true
   field_os2web_news_intro: true
   field_os2web_news_paragraph_bann: true
   field_os2web_news_paragraph_left: true
   field_os2web_news_paragraph_narr: true
   field_os2web_news_paragraph_righ: true
   field_os2web_news_paragraph_wid: true
-  field_os2web_news_primaryimage: true
   field_os2web_news_section: true
   langcode: true
+  links: true
   search_api_excerpt: true
