--- a/config/optional/field.field.node.os2web_news.field_os2web_news_paragraph_narr.yml
+++ b/config/optional/field.field.node.os2web_news.field_os2web_news_paragraph_narr.yml
@@ -1,4 +1,3 @@
-uuid: 8d11cf8d-4d48-4bf8-a1a1-c1bee5b7e34e
 langcode: da
 status: true
 dependencies:
@@ -13,7 +12,7 @@ id: node.os2web_news.field_os2web_news_paragraph_narr
 field_name: field_os2web_news_paragraph_narr
 entity_type: node
 bundle: os2web_news
-label: 'Afsnit (venstre sidebar)'
+label: 'Afsnit (smalle)'
 description: ''
 required: false
 translatable: false
@@ -75,6 +74,9 @@ settings:
       os2web_section_paragraph:
         weight: 35
         enabled: false
+      os2web_iframe:
+        weight: 36
+        enabled: false
       os2web_section_promoted_pages:
         weight: 36
         enabled: false
@@ -84,4 +86,10 @@ settings:
       os2web_wrapper:
         enabled: true
         weight: 38
+      os2web_news_block:
+        weight: 39
+        enabled: false
+      os2web_news_page:
+        weight: 40
+        enabled: false
 field_type: entity_reference_revisions
