--- a/config/optional/core.entity_form_display.node.os2web_news.default.yml
+++ b/config/optional/core.entity_form_display.node.os2web_news.default.yml
@@ -17,10 +17,13 @@ dependencies:
     - image.style.os2web_normal
     - node.type.os2web_news
   module:
+    - content_moderation
     - field_group
     - image_widget_crop
     - paragraphs
     - path
+    - scheduler
+    - scheduler_content_moderation_integration
     - text
 third_party_settings:
   field_group:
@@ -34,7 +37,7 @@ third_party_settings:
         - group_referencer
         - group_settings
       parent_name: ''
-      weight: 14
+      weight: 15
       format_type: tabs
       region: content
       format_settings:
@@ -105,7 +108,7 @@ third_party_settings:
         required_fields: true
       label: Sideafsnit
     group_settings:
-      children: {}
+      children: {  }
       parent_name: group_editform
       weight: 27
       format_type: tab
@@ -152,7 +155,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -317,51 +320,57 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 1
+    weight: 2
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
+  moderation_state:
+    type: moderation_state_default
+    weight: 9
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   path:
     type: path
-    weight: 4
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 11
+    weight: 12
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   publish_on:
-    type: datetime_timestamp
-    weight: 6
+    type: datetime_timestamp_no_default
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   publish_state:
-    type: options_select
+    type: scheduler_moderation
     weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   scheduler_settings:
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 9
+    weight: 1
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 12
+    weight: 13
     region: content
     settings:
       display_label: true
@@ -376,7 +385,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 3
     region: content
     settings:
       match_operator: CONTAINS
@@ -385,21 +394,20 @@ content:
       placeholder: ''
     third_party_settings: {  }
   unpublish_on:
-    type: datetime_timestamp
-    weight: 7
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  unpublish_state:
-    type: options_select
+    type: datetime_timestamp_no_default
     weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
+  unpublish_state:
+    type: scheduler_moderation
+    weight: 11
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   url_redirects:
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
-  moderation_state: true
