--- a/config/optional/views.view.os2web_news.yml
+++ b/config/optional/views.view.os2web_news.yml
@@ -176,6 +176,35 @@ display:
     display_options:
       display_extenders: {  }
       display_description: ''
+      sorts:
+        sticky:
+          id: sticky
+          table: node_field_data
+          field: sticky
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          entity_type: node
+          entity_field: sticky
+          plugin_id: standard
+        field_os2web_news_article_date_value:
+          id: field_os2web_news_article_date_value
+          table: node__field_os2web_news_article_date
+          field: field_os2web_news_article_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: standard
+      defaults:
+        sorts: false
     cache_metadata:
       max-age: -1
       contexts:
