--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "type": "drupal-module",
   "require": {
     "drupal/core": "*",
-    "drupal/video_embed_field": "*"
+    "drupal/video_embed_field": "*",
+    "drupal/smart_trim": "^1.3"
   },
   "license": "EUPL-1.2",
   "minimum-stability": "dev"
