--- a/config/optional/core.entity_view_display.node.os2web_news.teaser.yml
+++ b/config/optional/core.entity_view_display.node.os2web_news.teaser.yml
@@ -18,21 +18,37 @@ dependencies:
     - image.style.os2web_medium
     - node.type.os2web_news
   module:
+    - smart_trim
     - svg_image
-    - text
     - user
 id: node.os2web_news.teaser
 targetEntityType: node
 bundle: os2web_news
 mode: teaser
 content:
+  content_moderation_control:
+    weight: -20
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_os2web_news_description:
-    type: text_trimmed
+    type: smart_trim
     weight: 2
     region: content
     label: hidden
     settings:
       trim_length: 150
+      trim_type: chars
+      trim_suffix: ''
+      wrap_class: trimmed
+      more_text: More
+      more_class: more-link
+      trim_options:
+        text: true
+        trim_zero: false
+      wrap_output: false
+      more_link: false
+      summary_handler: full
     third_party_settings: {  }
   field_os2web_news_heading:
     type: basic_string
