BKDK-405 Removing news default date value

--- a/config/optional/field.field.node.os2web_news.field_os2web_news_article_date.yml
+++ b/config/optional/field.field.node.os2web_news.field_os2web_news_article_date.yml
@@ -12,9 +12,7 @@ label: 'Newsarticle Date'
 description: ''
 required: false
 translatable: false
-default_value:
-  -
-    value: 1607437289
+default_value: {  }
 default_value_callback: ''
 settings: {  }
 field_type: timestamp
