--- a/config/optional/core.entity_view_display.paragraph.os2web_news_block.default.yml
+++ b/config/optional/core.entity_view_display.paragraph.os2web_news_block.default.yml
@@ -4,6 +4,7 @@ dependencies:
   config:
     - field.field.paragraph.os2web_news_block.field_os2web_news_block_header
     - field.field.paragraph.os2web_news_block.field_os2web_news_details_link
+    - field.field.paragraph.os2web_news_block.field_os2web_news_par_section
     - paragraphs.paragraphs_type.os2web_news_block
   module:
     - link
@@ -33,4 +34,5 @@ content:
     type: link
     region: content
 hidden:
+  field_os2web_news_par_section: true
   search_api_excerpt: true
