--- a/os2web_news.info.yml
+++ b/os2web_news.info.yml
@@ -1,7 +1,7 @@
 name: 'OS2Web News'
 type: module
 description: 'News handler.'
-package: OS2
+package: 'OS2Web'
 core: 8.x
 core_version_requirement: ^8 || ^9
 dependencies:
